[package]
name = "ecommerce-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros","uuid","chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.0", features = ["serde","v4"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0.100"

