[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["macros", "time", "sync","rt-multi-thread"] }
dashmap = "5.4"
parking_lot = "0.12"
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }   # optional, for redis backend
anyhow = "1.0"
axum = "0.8.6"
async-trait = "0.1.89"
